Horde3D/Bindings/C++/Horde3D.h

#		define DLL extern "C" __declspec( dllimport )
#		define DLL extern "C"
typedef int ResHandle;
typedef int NodeHandle;
struct EngineOptions
{
	enum List
	{
		MaxLogLevel = 1,
		MaxNumMessages,
		TrilinearFiltering,
		AnisotropyFactor,
		TexCompression,
		LoadTextures,
		FastAnimation,
		ShadowMapSize,
		SampleCount,
		WireframeMode,
		DebugViewMode,
		DumpFailedShaders
	};
};
struct EngineStats
{
	enum List
	{
		TriCount = 100,
		BatchCount,
		LightPassCount
	};
};
struct ResourceTypes
{
	enum List
	{
		Undefined = 0,
		SceneGraph,
		Geometry,
		Animation,
		Material,
		Code,
		Shader,
		Texture2D,
		TextureCube,
		Effect,
		Pipeline
	};
};
struct SceneNodeTypes
{
	enum List
	{
		Undefined = 0,
		Group,
		Model,
		Mesh,
		Joint,
		Light,
		Camera,
		Emitter
	};
};
	DLL const char *getVersionString();
	DLL bool checkExtension( const char *extensionName );
	DLL	bool init();
	DLL void release();
	DLL bool render( NodeHandle cameraNode );
	DLL void clear();
	DLL const char *getMessage( int *level, float *time );
	DLL float getOption( EngineOptions::List param );
	DLL bool setOption( EngineOptions::List param, float value );
	DLL float getStat( EngineStats::List param, bool reset );
	DLL void showOverlay( float x_ll, float y_ll, float u_ll, float v_ll,
						  float x_lr, float y_lr, float u_lr, float v_lr,
						  float x_ur, float y_ur, float u_ur, float v_ur,
						  float x_ul, float y_ul, float u_ul, float v_ul,
						  int layer, ResHandle materialRes );
	DLL void clearOverlays();
	DLL int getResourceType( ResHandle res );
	DLL const char *getResourceName( ResHandle res );
	DLL ResHandle findResource( int type, const char *name );
	DLL ResHandle addResource( int type, const char *name, int flags );
	DLL ResHandle cloneResource( ResHandle sourceRes, const char *name );
	DLL int removeResource( ResHandle res );
	DLL bool isResourceLoaded( ResHandle res );
	DLL bool loadResource( ResHandle res, const char *data, int size );
	DLL bool unloadResource( ResHandle res );
	DLL int getResourceParami( ResHandle res, int param );
	DLL bool setResourceParami( ResHandle res, int param, int value );
	DLL float getResourceParamf( ResHandle res, int param );
	DLL bool setResourceParamf( ResHandle res, int param, float value );
	DLL const char *getResourceParamstr( ResHandle res, int param );
	DLL bool setResourceParamstr( ResHandle res, int param, const char *value );
	DLL const void *getResourceData( ResHandle res, int param );
	DLL bool updateResourceData( ResHandle res, int param, const void *data, int size );
	DLL ResHandle queryUnloadedResource( int index );
	DLL void releaseUnusedResources();
	DLL ResHandle createTexture2D( const char *name, int flags, int width, int height, bool renderable );
	DLL void setShaderPreambles( const char *vertPreamble, const char *fragPreamble );
	DLL bool setMaterialUniform( ResHandle materialRes, const char *name, float a, float b, float c, float d );
	DLL bool setPipelineStageActivation( ResHandle pipelineRes, const char *stageName, bool enabled );
	DLL bool getPipelineRenderTargetData( ResHandle pipelineRes, const char *targetName,
										  int bufIndex, int *width, int *height, int *compCount,
										  float *dataBuffer, int bufferSize );
	DLL int getNodeType( NodeHandle node );
	DLL NodeHandle getNodeParent( NodeHandle node );
	DLL bool setNodeParent( NodeHandle node, NodeHandle parent );
	DLL NodeHandle getNodeChild( NodeHandle node, int index );
	DLL NodeHandle addNodes( NodeHandle parent, ResHandle sceneGraphRes );
	DLL bool removeNode( NodeHandle node );
	DLL bool setNodeActivation( NodeHandle node, bool active );
	DLL bool checkNodeTransformFlag( NodeHandle node, bool reset );
	DLL bool getNodeTransform( NodeHandle node, float *tx, float *ty, float *tz,
							   float *rx, float *ry, float *rz, float *sx, float *sy, float *sz );
	DLL bool setNodeTransform( NodeHandle node, float tx, float ty, float tz,
							   float rx, float ry, float rz, float sx, float sy, float sz );
	DLL bool getNodeTransformMatrices( NodeHandle node, const float **relMat, const float **absMat );
	DLL bool setNodeTransformMatrix( NodeHandle node, const float *mat4x4 );